--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nanoid": "^5.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
